@@ -6,6 +6,7 @@
 - fixed partial validation
 - fix image bug in the `Image.measureWEBP()` method by [Marek Mraz](https://github.com/Mrazbb)
 - improved Markdown parser
+- improved HTML parser
 
 ========================
 0.0.97
